Adjusting the detail_product.html according to the new Products model

--- a/djangoweb/products/templates/products/detail_product.html
+++ b/djangoweb/products/templates/products/detail_product.html
@@ -58,7 +58,7 @@
 
                         {% for related in related_products %}
 
-                            <a href={% url 'products:product-detail' slug_category related.slug_product%}>
+                            <a href={% url 'products:product-detail' related.product_type.slug_category related.slug_product%}>
                                 <div class="related-card">
                                     <img src="{{ related.image.url }}" 
                                     alt="{{ related.name }}">
