Updating, Adjusting Products Images, and Organizing CSS.

--- a/djangoweb/products/templates/products/list_products.html
+++ b/djangoweb/products/templates/products/list_products.html
@@ -7,7 +7,7 @@
 
     <div class="content">
 
-        <div class="container list-product">
+        <div class="list-product">
 
             <!-- ORDERING -->
             <div class="ordering">
