Preparing the cart page

--- a/djangoweb/products/templates/products/detail_product.html
+++ b/djangoweb/products/templates/products/detail_product.html
@@ -31,7 +31,7 @@
                         </a>
 
                         <!-- CARRINHO -->
-                        <form action="#" method="post">
+                        <form action="{% url "products:cart" %}" method="post">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-cart">
 
