--- a/djangoweb/products/templates/products/index.html
+++ b/djangoweb/products/templates/products/index.html
@@ -5,7 +5,9 @@
 
     <section class="categories">
         <h2 class="categories-title">Nossas Linhas de Produtos</h2>
-        <p class="categories-subtitle">Encontre a categoria certa para o seu projeto</p>
+        <p class="categories-subtitle">
+            Encontre a categoria certa para o seu projeto
+        </p>
         <div class="categories-grid">
 
             {% for category in categories %}
